examples/test/testpolicy10071.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10071
  namespace: namespace454
spec:
  podSelector:
    matchLabels:
      key30: value20
      key7: value43
      key37: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value1
          key13: value19
      podSelector:
        matchLabels:
          key46: value33
